Server/Client Connection
 - Fixed issue with connection being closed

Signed-off-by: Lucas Bullen <lbullen@redhat.com>